# vit

./: .gitignore  README.md  pyproject.toml
data/images_inf/pet_type/: README.md
data/images_inf/skin_color/: README.md
data/images_train/pet_type/: README.md
data/images_train/skin_color/: README.md
script/fine_tuning/: fine_tuning.py  fine_tuning.sh
script/prediction/: 00_prediction.py  00_prediction.sh  01_confusion_matrix.py  01_confusion_matrix.sh
