[project]
name = "vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.10"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "datasets>=3.3.2",
    "evaluate>=0.4.3",
    "accelerate>=1.5.1",
    "huggingface-hub>=0.29.3",
    "numpy>=2.2.3",
    "requests>=2.32.3",
    "pillow>=11.1.0",
    "tensorboard>=2.19.0",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.0",
    "polars>=1.0.0",
    "tqdm>=4.67.1",
    "ipykernel>=7.2.0",
    "pyarrow>=23.0.1",
    "pandas>=3.0.1",
]

[tool.uv]
no-cache = true

